--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ body{
 
 .bg-blue .form-control-lg{
     border: 60px;
-    border-radius: 37px;
+    border-radius: 37px !important;
     height: 65px !important;
 }
 
@@ -90,6 +90,29 @@ body{
     font-size: 16px;
     color: white;
     background-color: #d68d00;
+}
+
+#city-zip-hidden{
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    position: absolute;
+    z-index: 10;
+    width: 500px;
+    top: 63px;
+    margin-left: 20px;
+    display: none;
+}
+
+#city-zip-hidden li a{
+    border: 1px solid #ddd;
+    margin-top: -1px; /* Prevent double borders */
+    background-color: #f6f6f6;
+    padding: 12px;
+    text-decoration: none;
+    font-size: 18px;
+    color: black;
+    display: block
 }
 
 #header-banner-title{
