--- a/style.css
+++ b/style.css
@@ -23,6 +23,26 @@
     src: url(fonts/gotham/Gotham-BookIta.otf);
 }
 
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+  
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #d68d00; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #d89108; 
+}
+
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
     color: lightgray;
     font-size: 14px;
@@ -191,6 +211,11 @@ body{
     font-size: 18px;
 }
 
+.star-off{
+    color: #666666;
+    font-size: 18px;
+}
+
 .testi-details{
     font-family: gotham-book-it;
     color: gainsboro;
@@ -277,16 +302,16 @@ body{
     visibility: hidden;
     -webkit-transition: visibility 0s linear 0.1s,opacity 0.3s ease;
     transition: visibility 0s linear 0.1s,opacity 0.3s ease;
-  }
+}
 
-  .modal_pop.open {
+.modal_pop.open {
     visibility: visible;
     opacity: 1;
     -webkit-transition-delay: 0s;
             transition-delay: 0s;
-  }
+}
 
-  .modal_overlay {
+.modal_overlay {
     position: fixed;
     top: 0;
     left: 0;
@@ -294,9 +319,9 @@ body{
     right: 0;
     z-index: 21;
     background-color: rgba(0, 0, 0, 0.7);
-  }
+}
 
-  .modal_close {
+.modal_close {
     position: absolute;
     top: 10px;
     right: 10px;
@@ -306,17 +331,17 @@ body{
     font-size: 24px;
     color: #747474;
     font-weight: bold;
-  }
+}
 
-  .modal_close:hover {
+.modal_close:hover {
     color: #000;
-  }
+}
 
-  .modal_container {
+.modal_container {
     position: relative;
     z-index: 22;
-    width: 400px;
-    height: 200px;
+    width: 600px;
+    height: 625px;
     top: 50%;
     -webkit-transform: translateY(-50%);
             transform: translateY(-50%);
@@ -324,6 +349,101 @@ body{
     margin: 0 auto;
     padding: 30px;
     background-color: #fff;
-    text-align: center;
-  }
+    text-align: left;
+    overflow: auto;
+}
+
+.modal_large {
+    width: 730px !important;
+    height: 550px !important;
+}
+
+  /** Modal Client Review **/
   
+.client-review-md-title {
+    font-family: gotham-book;
+    text-transform: uppercase;
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 0px;
+    line-height: 18px;
+}
+
+.review-md-hr{
+    border-bottom: 1px solid black;
+}
+
+.review-md-name {
+    font-family: gotham-book;
+    font-weight: bold;
+    font-size: 30px;
+    margin-bottom: 0px;
+}
+
+.review-md-address {
+    font-family: gotham-book;
+    color: #979da3;
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 0px;
+}
+
+.rating-client{
+    font-family: gotham-book;
+    font-weight: bold;
+    font-size: 22px;
+    margin-bottom: 0px;
+    line-height: 7px;
+    margin-top: 22px;
+}
+
+.overall-details{
+    line-height: 8px;
+}
+
+.overall-stars {
+    line-height: 7.5px;
+}
+
+.title-overall{
+    font-family: gotham-medium;
+    font-size: 15px;
+    line-height: 8px;
+    font-weight: bold;
+}
+
+.comments-review {
+    font-family: gotham-medium;
+    font-weight: bold;
+    font-size: 15px;
+}
+
+.comments-details-review {
+    font-family: gotham-book;
+    font-weight: bold;
+    font-size: 15px;
+}
+
+/** Find Category Modal **/
+
+.category-md-title{
+    font-size: 21px;
+    text-transform: uppercase;
+    margin-bottom:0px;
+}
+
+.category-md-subtitle {
+    font-family: gotham-book;
+    font-size: 14px;
+}
+
+.category-md-list li {
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.category-md-list li a {
+    color: #1864af;
+    font-family: gotham-book;
+    font-size: 14px;
+}
